arc-script/arc-script-test/compile/src/snapshots/rust@task_identity_untagged.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/task_identity_untagged.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
pub struct HandlerIdentity<
    'i,
    'source,
    'timer,
    'channel,
    O: 'static + Operator,
    B: Backend,
    C: ComponentDefinition,
> {
    pub op: &'i mut O,
    pub ctx: &'i mut OperatorContext<'source, 'timer, 'channel, O, B, C>,
    pub timestamp: Option<u64>,
}
#[derive(ArconState)]
pub struct TaskIdentity {}
fn Identity() -> OperatorBuilder<TaskIdentity> {
    OperatorBuilder {
        constructor: Arc::new(move |b| TaskIdentity {}),
        conf: Default::default(),
    }
}
impl Operator for TaskIdentity {
    type IN = Struct5valuei32End;
    type OUT = Struct5valuei32End;
    type TimerState = ArconNever;
    type OperatorState = Self;
    fn handle_element(
        &mut self,
        elem: ArconElement<Self::IN>,
        ref mut ctx: OperatorContext<Self, impl Backend, impl ComponentDefinition>,
    ) -> OperatorResult<()> {
        let ArconElement { timestamp, data } = elem;
        let event = data.value;
        let mut handler = HandlerIdentity {
            op: self,
            ctx,
            timestamp,
        };
        handler.handle(event);
        Ok(())
    }
    arcon::ignore_timeout!();
    arcon::ignore_persist!();
}
impl<'i, 'source, 'timer, 'channel, B: Backend, C: ComponentDefinition>
    HandlerIdentity<'i, 'source, 'timer, 'channel, TaskIdentity, B, C>
{
    fn handle(&mut self, event_0: i32) -> OperatorResult<()> {
        let y_1_0 = self.emit(event_0);
        y_1_0;
        Ok(())
    }
    fn emit(&mut self, event_0: i32) {
        let data = Struct5valuei32End { value: event_0 };
        let elem = ArconElement {
            data,
            timestamp: self.timestamp,
        };
        self.ctx.output(elem);
    }
}
pub fn main(input_0: Stream<Struct5valuei32End>) -> Stream<Struct5valuei32End> {
    let y_1_0 = Identity();
    let y_1_1 = Stream::operator(input_0, y_1_0);
    y_1_1
}
#[arcorn::rewrite]
#[derive(Copy)]
pub struct Struct5valuei32End {
    value: i32,
}


