arc-script/arc-script-test/compile/src/snapshots/rust@unit_fun.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/unit_fun.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::arcorn;
    use arc_script::arcorn::*;
    pub fn foo(x_0: Unit) -> Unit {
        val!(x_0)
    }
    pub fn bar() -> Unit {
        let x_1: Box<dyn ArcornFn(Unit) -> Unit> = Box::new(foo) as Box<dyn ArcornFn(Unit) -> Unit>;
        let x_2: Unit = ();
        let x_3: Unit = val!(x_1)(val!(x_2));
        val!(x_3)
    }
}
pub use arc_script_output::*;


